k3s/kiwix/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwix-svc
  namespace: utilities
spec:
  selector:
    app: kiwix
  ports:
    - name: http
      port: 80
      targetPort: 8080
