k3s/kiwix/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiwix-ingress
  namespace: utilities
spec:
  rules:
    - host: kiwix.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiwix-svc
                port:
                  number: 80
    - host: kiwix.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiwix-svc
                port:
                  number: 80
